# tracey

./: Cargo.toml  Justfile  README.md  README.md.in  dist-workspace.toml
.config/tracey/: config.kdl  config.styx
.github/: build-setup.yml
.github/workflows/: ci.yml  release.yml
crates/tracey/: Cargo.toml  build.rs
crates/tracey-api/: Cargo.toml
crates/tracey-api/src/: lib.rs
crates/tracey-config/: Cargo.toml
crates/tracey-config/src/: lib.rs
crates/tracey-core/: Cargo.toml
crates/tracey-core/src/: code_units.rs  lexer.rs  lib.rs  markdown.rs  positions.rs  sources.rs
crates/tracey-proto/: Cargo.toml
crates/tracey-proto/src/: lib.rs
crates/tracey/dashboard/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
crates/tracey/dashboard/src/: hooks.ts  main.tsx  style.css  types.ts
crates/tracey/src/: data.rs  lib.rs  lsp.rs  main.rs  serve.rs  server.rs  vite.rs
crates/tracey/src/bridge/: lsp.rs  mcp.rs  query.rs
crates/tracey/src/daemon/: client.rs  engine.rs  mod.rs  service.rs  watcher.rs
crates/tracey/tests/: integration_tests.rs  lsp_diagnostic_lifecycle_tests.rs  lsp_multiroot_bridge_tests.rs  mcp_tests.rs  watcher_tests.rs
crates/tracey/tests/common/: mod.rs
crates/xtask/: Cargo.toml
docs/content/guide/: ai-integration.md  cli-reference.md  getting-started.md
docs/content/spec/: tracey.md
docs/spec/: tracey.md
src/: config.rs  coverage.rs  lexer.rs  main.rs  scanner.rs  spec.rs
tests/: integration.rs
tracey-zed/: Cargo.toml  README.md.in
tracey-zed/src/: lib.rs
(+17 files in other folders)
